# instructor_workout

./: .dockerignore  .gitignore  .gitigonre  Dockerfile.airflow  Dockerfile.streamlit  README.md  docker-compose.yml  inspeciona_s3.py  orchestrator.py  pyproject.toml  requirements_streamlit.txt  start_env.ps1  test_env.py
.devcontainer/: devcontainer.json
airflow/: docker-compose.yaml  requirements.txt
airflow/dags/: instructor_workout_pipeline.py
airflow/scripts/: create_data_lake_structure_s3.py  depara_heavy_kaggle_ingest_s3.py  gold_dim_exercises.py  gold_dim_exercises_kaggle.py  gold_fact_workout_sets.py  gold_metrics.py  hevy_ingest_incremental_s3.py  ingest_synthetic_base_to_bronze.py  kaggle_ingest_s3.py  silver_depara_heavy_kaggle_transform.py  silver_kaggle_transform.py  silver_synthetic_transform.py  silver_users_transform.py  users_form_ingest_s3.py
app/: streamlit_app.py
dags/: dbt_pipeline_dag.py  hevy_workout_minio_dag.py  testePandas.py  workout_api_spark_etl.py
data/bronze/hevy/: last_sync.json  workouts_9168d107_20251123T172125Z.jsonl
dbt/instructor_workout_dbt/: .user.yml  dbt_project.yml  instructor_workout.duckdb  profiles.yml
dbt/instructor_workout_dbt/models/: exercises_dim.sql  gold_view.sql  (+4 more)
estudo/: 01_schema_dictionary.ipynb  estudo_merge_userseHeavy.ipynb
etl/: schema.py  spark_session.py  spark_test.py
etl/bronze/: user_form_service.py
etl_project/: pyproject.toml
notebooks/: 01_schema_dictionary.ipynb
observability/logging/: logger.py
src/instructor_workout/: profile_api.py  teste.py
tests/: test_spark_minio.py
(+59 files in other folders)
