[project]
name = "instructor_workout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "darthVarada", email = "fafapelegia@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "opentelemetry-instrumentation>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "pandas>=2.3.3",
    "prefect>=3.6.1",
    "prometheus-client>=0.23.1",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "pyspark>=4.0.1",
    "s3fs>=2025.10.0",
    "tenacity>=9.1.2",
]

[project.scripts]
etl-project = "etl_project:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
