[project]
name = "instructor_workout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "darthVarada", email = "fafapelegia@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.3",
    "boto3>=1.40.70",
    "httpx>=0.28.1",
    "kaggle>=1.8.2",
    "kagglehub>=0.3.13",
    "opentelemetry-instrumentation>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "pandas>=2.3.3",
    "prefect>=3.6.1",
    "prometheus-client>=0.23.1",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "pymongo>=4.15.4",
    "pyspark>=4.0.1",
    "python-dotenv>=1.2.1",
    "s3fs>=2024.3.1",
    "streamlit>=1.50.0",
    "tenacity>=9.1.2",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
